# clausewitz-script-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
res/hoi4/common/characters/: TST.expected.txt  TST.txt
res/hoi4/common/ideas/: test.expected.txt  test.txt
res/hoi4/common/national_focus/: test.expected.txt  test.txt
res/hoi4/interface/: test.expected.gfx
res/hoi4/localisation/: test_l_simp_chinese.expected.yml  test_l_simp_chinese.yml
src/: hoi4.pest  lib.rs  main.rs  parser.rs  string_utils.rs
src/localisation/: localisation.pest  localisation.rs
src/script/: script.pest  script.rs
tests/: hoi4_test.rs
