[package]
name = "clausewitz-script-parser"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.6"
pest_derive = "2.6"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.106", features = ["serde-serialize"] }
